--- a/index.html
+++ b/index.html
@@ -3,16 +3,37 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <title>Onur Kat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="I'm a computer engineer specializing in software development. Here are my social media profiles and contact details.">
+    <meta property="og:description" content="I'm a computer engineer specializing in software development. Here are my social media profiles and contact details.">
+    <meta property="og:title" content="Onur Kat">
+    <meta property="og:site_name" content="Onur Kat" />
+    <meta property="twitter:card" content="summary">
+    <meta property="og:image" content="https://pbs.twimg.com/profile_images/1117208388998504449/SDjTLhF6_400x400.png">
+    <meta property="twitter:site" content="@onrkat">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://onurkat.com/" />
+    <meta name=”robots” content="index, follow">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">    
+    <link rel="stylesheet" href="background.css">
+    <style>html, body {height: 100%;background-color: #000000; color: #ffffff;overflow: hidden;user-select: none;}a:hover{text-decoration: none;}</style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <div id='stars'></div>
+      <div id='stars2'></div>
+      <div id='stars3'></div>
+      <div class="container h-100 d-flex justify-content-md-center">
+      <div class="mx-auto">
+        <h1 class="display-2">Onur Kat</h1>
+        <hr size="20"></hr>
+        <h3 class="text-monospace">> Follow me on <a href="">Twitter</a>.</h3>
+        <h3 class="text-monospace">> View my code on <a href="">Github</a>.</h3>
+        <h3 class="text-monospace">> Check out my <a href="">LinkedIn</a>.</h3>
+        <h3 class="text-monospace">> Not enough? <a href="">Email</a> me.</h3>
+      </div>
+      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
