--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Onur Kat">
     <meta property="og:site_name" content="Onur Kat" />
     <meta property="twitter:card" content="summary">
-    <meta property="og:image" content="https://pbs.twimg.com/profile_images/1117208388998504449/SDjTLhF6_400x400.png">
+    <meta property="og:image" content="/img/image.jpg">
     <meta property="twitter:site" content="@onrkat">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://onurkat.com/" />
@@ -21,7 +21,7 @@
     <link rel="manifest" href="/favicon/site.webmanifest">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="background.css">    
+    <link rel="stylesheet" href="background.css">
   </head>
   <body>
     <div id='stars'></div>
