--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Onur Kat">
     <meta property="og:site_name" content="Onur Kat" />
     <meta property="twitter:card" content="summary">
-    <meta property="og:image" content="/img/image.jpg">
+    <meta property="og:image" content="https://onurkat.com/img/image.jpg">
     <meta property="twitter:site" content="@onrkat">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://onurkat.com/" />
