--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#000000">
     <meta name="msapplication-TileColor" content="#000000">
+    <meta name="msapplication-TileImage" content="/favicon/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="/favicon/site.webmanifest">
     <!-- Bootstrap CSS -->
