--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div id='stars'></div>
       <div id='stars2'></div>
       <div id='stars3'></div>
-      <div class="container h-100 d-flex justify-content-md-center">
-      <div class="mx-auto">
+      <div class="container h-100 d-flex justify-content-md-center mt-xl-5">
+      <div class="mx-auto mt-xl-5">
         <h1 class="display-2">Onur Kat</h1>
         <hr size="20"></hr>
         <h3 class="text-monospace">> Follow me on <a href="https://twitter.com/onrkat">Twitter</a>.</h3>
