--- a/index.html
+++ b/index.html
@@ -35,11 +35,33 @@
       <div class="mx-auto mt-md-5">
         <h1 class="display-2">Onur Kat</h1>
         <hr size="20"></hr>
-        <h3 class="text-monospace">> Follow me on <a href="https://twitter.com/onrkat">Twitter</a>.</h3>
-        <h3 class="text-monospace">> View my code on <a href="https://github.com/onurkat">Github</a>.</h3>
-        <h3 class="text-monospace">> Check out my <a href="https://linkedin.com/in/onurkat">LinkedIn</a>.</h3>
-        <h3 class="text-monospace">> Not enough? <a href="/cdn-cgi/l/email-protection">Email</a> me.</h3>
+        <h3 class="text-monospace">> Follow me on <a title="Twitter account of Onur Kat" href="https://twitter.com/onrkat">Twitter</a>.</h3>
+        <h3 class="text-monospace">> View my code on <a title="Github account of Onur Kat" href="https://github.com/onurkat">Github</a>.</h3>
+        <h3 class="text-monospace">> Check out my <a title="LinkedIn account of Onur Kat" href="https://linkedin.com/in/onurkat">LinkedIn</a>.</h3>
+        <h3 class="text-monospace">> Not enough? <a title="Email address of Onur Kat" href="/cdn-cgi/l/email-protection">Email</a> me.</h3>
       </div>
+      </div>
+      <div class="seokey">
+        <h1>onurkat.com</h1>
+        <strong>Onur Kat is a software developer from Istanbul, Turkey.</strong>
+        <p>Onur Kat is the owner of the onurkat.com website. He graduated from Kocaeli University, Department of Computer Engineering.
+        He has worked on subjects such as internet of things, machine learning, onurkat, artificial intelligence. onurkat.com is Onur Kat's personal website.
+        onurkat wants to improve himself in software development. </p>
+        <strong>onurkat is the owner of the onurkat.com</strong>
+        <p>onurkat wants to improve himself in software development. Onur Kat is the owner of the onurkat.com website.
+        He graduated from Kocaeli University, Department of Computer Engineering.
+        He has worked on subjects such as internet of things, machine learning, onurkat, artificial intelligence. </p>
+        <strong>Social media accounts of Onur Kat </strong>
+        <p><ul>
+          <li>Twitter account of Onur Kat</li>
+          <li>Github account of Onur Kat</li>
+          <li>Hackerrank account of Onur Kat</li>
+          <li>Linkedin account of Onur Kat</li>
+          <li>Instagram account of Onur Kat</li>
+          <li>Email account of Onur Kat</li>
+        </ul></p>
+        <h1>onurkat.com</h1>
+        <h2>Personal website of Onur Kat, onurkat.com</h2>
       </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
