--- a/index.html
+++ b/index.html
@@ -44,22 +44,25 @@
       <div class="seokey">
         <h1>onurkat.com</h1>
         <strong>Onur Kat is a software developer from Istanbul, Turkey.</strong>
-        <p>Onur Kat is the owner of the onurkat.com website. He graduated from Kocaeli University, Department of Computer Engineering.
-        He has worked on subjects such as internet of things, machine learning, onurkat, artificial intelligence. onurkat.com is Onur Kat's personal website.
-        onurkat wants to improve himself in software development. </p>
+        <span>Onur Kat is the owner of the onurkat.com website.<br />
+        He graduated from Kocaeli University, Department of Computer Engineering.<br />
+        He has worked on subjects such as internet of things, machine learning, onurkat, artificial intelligence.<br />
+        onurkat.com is Onur Kat's personal website.<br />
+        onurkat wants to improve himself in software development.<br /> </span>
         <strong>onurkat is the owner of the onurkat.com</strong>
-        <p>onurkat wants to improve himself in software development. Onur Kat is the owner of the onurkat.com website.
-        He graduated from Kocaeli University, Department of Computer Engineering.
-        He has worked on subjects such as internet of things, machine learning, onurkat, artificial intelligence. </p>
-        <strong>Social media accounts of Onur Kat </strong>
-        <p><ul>
+        <span>onurkat wants to improve himself in software development.<br />
+        Onur Kat is the owner of the onurkat.com website.<br />
+        He graduated from Kocaeli University, Department of Computer Engineering.<br />
+        He has worked on subjects such as internet of things, machine learning, onurkat, artificial intelligence.<br /> </span>
+        <strong>Social media accounts of Onur Kat<br /> </strong>
+        <span><ul>
           <li>Twitter account of Onur Kat</li>
           <li>Github account of Onur Kat</li>
           <li>Hackerrank account of Onur Kat</li>
           <li>Linkedin account of Onur Kat</li>
           <li>Instagram account of Onur Kat</li>
           <li>Email account of Onur Kat</li>
-        </ul></p>
+        </ul></span>
         <h1>onurkat.com</h1>
         <h2>Personal website of Onur Kat, onurkat.com</h2>
       </div>
