--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     <link rel="stylesheet" href="background.css">
   </head>
   <body>
-    <div id='stars'></div>
+    <div id="starsgroup">
+      <div id='stars'></div>
       <div id='stars2'></div>
       <div id='stars3'></div>
-      <div class="container h-100 d-flex justify-content-md-center mt-xl-5">
+    </div>
+      <div class="container d-flex justify-content-md-center mt-xl-5">
       <div class="mx-auto mt-md-5">
         <h1 class="display-2">Onur Kat</h1>
         <hr size="20"></hr>
