--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta name="msapplication-TileImage" content="/favicon/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="canonical" href="https://onurkat.com/">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="background.css">
@@ -44,7 +45,7 @@
       </div>
       </div>
       <div class="seokey">
-        <h1>onurkat.com</h1>
+        <h2>onurkat.com</h2>
         <strong>Onur Kat is a software developer from Istanbul, Turkey.</strong>
         <span>Onur Kat is the owner of the onurkat.com website.<br />
         He graduated from Kocaeli University, Department of Computer Engineering.<br />
@@ -65,7 +66,6 @@
           <li>Instagram account of Onur Kat</li>
           <li>Email account of Onur Kat</li>
         </ul></span>
-        <h1>onurkat.com</h1>
         <h2>Personal website of Onur Kat, onurkat.com</h2>
       </div>
     <!-- Optional JavaScript -->
