--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
       <div class="container d-flex justify-content-md-center mt-xl-5">
       <div class="mx-auto mt-md-5">
         <h1 class="display-2">Onur Kat</h1>
+	      <h2 class="text-monospace">SAP Hybris CX Backend Developer @ <a href="https://itelligencegroup.com/tr/">Itelligence TR</a>      
         <hr size="20"></hr>
         <h3 class="text-monospace">> Follow me on <a title="Twitter account of Onur Kat" href="https://twitter.com/onrkat">Twitter</a>.</h3>
         <h3 class="text-monospace">> View my code on <a title="Github account of Onur Kat" href="https://github.com/onurkat">Github</a>.</h3>
         <h3 class="text-monospace">> Check out my <a title="LinkedIn account of Onur Kat" href="https://linkedin.com/in/onurkat">LinkedIn</a>.</h3>
+	<h3 class="text-monospace">> Read my blog at<a title="Medium account of Onur Kat" href="https://medium.com/@onurkat">Medium</a>.</h3>      
         <h3 class="text-monospace">> Not enough? <a title="Email address of Onur Kat" href="/cdn-cgi/l/email-protection">Email</a> me.</h3>
       </div>
       </div>
